Fix customer logos in FF and on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,10 +1,14 @@
 .ViewPullRequests {
   position: relative;
-  top: 7px;
+  top: 8px;
   padding: 3px 7px;
-  font-size: 12px;
+  font-size: 10px;
   border: 1px solid rgba(124, 131, 180, 0.31);
   border-radius: 4px;
+  white-space: nowrap;
+  @media only screen and (min-width: 768px) {
+    font-size: 12px;
+  }
 }
 
 .ViewPullRequests:hover {
@@ -13,9 +17,49 @@
 }
 
 .ViewPullRequests-Icon {
-  width: 9px;
+  width: 7px;
   height: auto;
   position: relative;
-  top: 2px;
+  top: 1px;
   margin-left: 5px;
+  @media only screen and (min-width: 768px) {
+    width: 9px;
+    top: 2px;
+  }
+}
+
+.CustomerLogos {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.CustomerLogos-Item {
+  padding-top: 25px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0px;
+  text-align: center;
+  width: 80px;
+  height: 40px;
+  position: relative;
+  float: none;
+  padding: 0 20px;
+  @media only screen and (min-width: 768px) {
+    height: 72px;
+    width: 140px;
+    padding: 0 40px;
+    margin: 30px 0px;
+  }
+}
+
+.CustomerLogos-Item-Content {
+  height: 100%;
+}
+
+.CustomerLogos-Item-Logo {
+  position: relative;
+  top: auto;
+  width: 100%;
+  height: 100%;
 }
