--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -161,7 +161,7 @@
 .compatibility-score-container h3 {
   margin-top: 0.7rem;
   margin-bottom: 3rem;
-  color: #9E9E9E;
+  color: #9e9e9e;
   font-weight: 600;
 }
 
@@ -420,42 +420,6 @@ a .language-name {
 .customers-bg {
   background: linear-gradient(rgba(255, 255, 255, 0), rgba(245, 246, 255, 1))
     no-repeat;
-}
-
-.customer-logos {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.customer-logo {
-  padding-top: 25px;
-  display: flex;
-  flex-direction: column;
-  margin: 20px 0px;
-  text-align: center;
-  width: 80px;
-  height: 40px;
-  position: relative;
-  float: none;
-  padding: 0 20px;
-  @media only screen and (min-width: 768px) {
-    height: 72px;
-    width: 140px;
-    padding: 0 40px;
-    margin: 30px 0px;
-  }
-}
-
-.customer-logo a {
-  height: 100%;
-}
-
-.customer-logo img {
-  position: relative;
-  top: auto;
-  width: 100%;
-  height: 100%;
 }
 
 .customers p {
